:lipstick: Updated styles to fix input prefix and suffix overlap as well as center control overlap - #43

--- a/src/app/theme/themedInputDark.scss
+++ b/src/app/theme/themedInputDark.scss
@@ -18,10 +18,7 @@ $break-medium: 767px;
 .wrapper {
     margin: auto;
     position: relative;
-    width: 70%;
-    @media screen and (max-width: $break-medium) {
-        width: 100%;
-    }
+    width: 100%;
 }
 .inputOuterWrapper {
     position: relative;
